--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -30,6 +30,10 @@
                         </li>
                         {% endif %}
                         {% endfor %}
+                        <!-- Remove or comment out the Archive link -->
+                        <!-- <li>
+                            <a href="{{ site.baseurl }}/archive">Archive</a>
+                        </li> -->
                         <li class="search-icon">
                             <a href="javascript:void(0)">
                                 <i class="fa fa-search"></i>
